--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.background {
+  background-image: url(/src/image/images.jpg);
+  background-position: center;
+  color: red;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
